--- a/app/src/main/res/layout/adapter_qiita_item_list.xml
+++ b/app/src/main/res/layout/adapter_qiita_item_list.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.github.hkusu.android_mvc_sample.viewController.QiitaItemListAdapter"
+    tools:context="jp.yumemi.lab.refactorme.module.qiita.presentation.QiitaItemListAdapter"
     >
 
     <ImageView
