--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="io.github.hkusu.android_mvc_sample.viewController.DetailFragment"
+    tools:context="jp.yumemi.lab.refactorme.module.qiita.presentation.DetailFragment"
     >
 
     <WebView
