--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.github.hkusu.android_mvc_sample.viewController.ListFragment"
+    tools:context="jp.yumemi.lab.refactorme.module.qiita.presentation.ListFragment"
     >
 
     <TextView
