--- a/app/src/main/res/layout/sample_hoge_view.xml
+++ b/app/src/main/res/layout/sample_hoge_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <io.github.hkusu.android_mvc_sample.customView.HogeView
+    <jp.yumemi.lab.refactorme.module.qiita.presentation.view.ExampleView
         android:background="#ccc"
         android:layout_width="300dp"
         android:layout_height="300dp"
