--- a/app/src/main/res/values/attrs_hoge_view.xml
+++ b/app/src/main/res/values/attrs_hoge_view.xml
@@ -1,5 +1,5 @@
 <resources>
-    <declare-styleable name="HogeView">
+    <declare-styleable name="ExampleView">
         <attr name="exampleString" format="string"/>
         <attr name="exampleDimension" format="dimension"/>
         <attr name="exampleColor" format="color"/>
